@@ -304,6 +304,7 @@ class NmapOps {
   bool mass_dns;
   bool always_resolve;
   bool resolve_all;
+  bool unique;
   char *dns_servers;
 
   /* Do IPv4 ARP or IPv6 ND scan of directly connected Ethernet hosts, even if
